# crawly-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRAWL4AI_ADVANCED_FEATURES.md  CRAWL_FIX_PLAN.md  DEDUPLICATION_PLAN.md  Dockerfile  PR_FIXES.md  PR_FIXES_IMPLEMENTATION.md  README.md  REFACTOR_CRAWLING_TOOLS.md  REFACTOR_DIRECTORY.md  REFACTOR_RAG.md  REFACTOR_WEB.md  RENAME_PLAN.md  crawler-mcp-pr9-fixes.md  demo.py  dev.sh  docker-compose.yml  docker-mcp-pr7-fixes.md  nugs-pr1-fixes.md  pyproject.toml  server-info.json  supervisord.conf  test_optimizations.py  unique_domains.txt  vector_db_base_urls.md  verify_optimizations.py
.claude/: settings.json
.claude/agents/: fastmcp-developer.md  research-agent.md
.claude/agents/kfc/: spec-design.md  spec-judge.md  spec-requirements.md  spec-system-prompt-loader.md  spec-tasks.md
.claude/commands/: status.md  test_mcp_tool.md
.claude/system-prompts/: spec-workflow-starter.md
.claude/templates/: config.py  prompts.py  resources.py  server_template.py  test_server.py  tools.py
crawler_mcp/: __init__.py  config.py  server.py
crawler_mcp/core/: __init__.py  browser_pool.py  caching.py  connection_pool.py  embeddings.py  orchestrator.py  rag.py  resilience.py  sources.py  streaming.py  vectors.py
crawler_mcp/core/rag/: __init__.py  chunking.py  deduplication.py  embedding.py  processing.py  service.py
crawler_mcp/core/vectors/: __init__.py  base.py  collections.py  operations.py  search.py  statistics.py
crawler_mcp/crawlers/: __init__.py  base.py  directory.py  repository.py  web.py
crawler_mcp/middleware/: __init__.py  error.py  logging.py  progress.py
crawler_mcp/models/: __init__.py  crawl.py  rag.py  sources.py
crawler_mcp/tools/: __init__.py  crawling.py  rag.py
crawler_mcp/types/: crawl4ai_types.py
crawler_mcp/webhook/: README.md  __init__.py  server.py
crawlerr/: __init__.py  config.py  server.py
crawlerr/middleware/: __init__.py  error_middleware.py  logging_middleware.py  progress_middleware.py
crawlerr/models/: __init__.py  crawl_models.py  rag_models.py  source_models.py
crawlerr/prompts/: __init__.py
crawlerr/services/: __init__.py  browser_manager.py  crawl_orchestrator.py  crawler_service.py  embedding_service.py  gpu_manager.py  memory_manager.py  rag_service.py  source_service.py  vector_service.py
crawlerr/services/extractors/: __init__.py  base_extractor.py
crawlerr/services/strategies/: __init__.py  base_strategy.py  directory_strategy.py  repository_strategy.py  web_strategy.py
crawlerr/tools/: __init__.py  crawling_tools.py  rag_tools.py
data/scripts/: batch_extraction.py  extract_base_urls.py  manual_extraction.py
docs/: CONFIGURATION_GUIDE.md  CRAWL4AI_ADVANCED_FEATURES.md  GPU_ACCELERATION.md  IMPLEMENTATION_PLAN.md  REFACTOR_VECTORS.md  middleware.md  testing.md
favicon/: manifest.json
scripts/: extract_base_urls.py  extract_coderabbit_prompts.py  migrate_to_deterministic_ids.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_backwards_compatibility.py  test_config.py  test_core_services.py  test_crawler_comprehensive.py  test_crawlers.py  test_crawling_tools.py  test_deduplication.py  test_deduplication_performance.py  test_integration_flow.py  test_middleware_comprehensive.py  test_migration.py  test_models.py  test_rag_comprehensive.py  test_rag_edge_cases.py  test_rag_integration.py  test_rag_tools.py  test_server.py  test_server_health.py  test_sources_comprehensive.py  test_sources_simple.py  test_vector_modules.py  test_vectors_comprehensive.py
